优化代码list.get(0)改成 getFirst