@@ -53,7 +53,7 @@ public class JsonPointerPostProcessor
             if (parameters.size() != 1) {
                 log.debug("[{}] post processor only need one parameter, rest will be ignored", getName());
             }
-            String path = parameters.get(0);
+            String path = parameters.getFirst();
             try {
                 JsonNode node = mapper.readTree(result).at(path);
                 if (node.isMissingNode()) {
